--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/src/assets/Netflix_Symbol.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Netfilx</title>
+    <script type="text/javascript"
+      src="https://app.sandbox.midtrans.com/snap/snap.js"
+      data-client-key="SB-Mid-client-iSVjlcp_UjAjEs2a"></script>
   </head>
   <body>
     <div id="root"></div>
